# spotify2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
analytics/: __init__.py  date_ranges.py  diversity.py  insights.py  metrics.py  obsession.py  wrapped.py
app/: main.py  navigation.py  state.py  types.py
app/ui/: components.py  date_filter.py  pages.py  settings.py  theme.py
data/: demo_streaming_history.json
db/: init_db.py  models.py  repository.py  seed_demo.py  session.py
db/migrations/: README  env.py
db/migrations/versions/: 0001_initial_schema.py  0002_oauth_tokens.py  0003_app_settings.py
docs/: REFERENCE_PARITY.md
exports/: __init__.py  csv_export.py  pdf_export.py
spotify/: __init__.py  auth.py  client.py  metadata_resolver.py  sync.py
tests/: test_aggregates.py  test_date_ranges.py  test_diversity.py  test_obsession.py  test_smoke.py  test_streaks.py
