[project]
name = "spotify2"
version = "0.1.0"
description = "Local-first Spotify Stats dashboard in Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.42.0",
  "plotly>=6.0.0",
  "pandas>=2.2.0",
  "sqlalchemy>=2.0.37",
  "alembic>=1.14.0",
  "spotipy>=2.25.0",
  "cryptography>=44.0.0",
  "python-dotenv>=1.0.1",
  "reportlab>=4.2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.ui", "db", "spotify", "analytics", "exports"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
